recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:2: error: value === is not a member of Int
	if (level === 0 ) {
                  ^Sierpinski:12: error: not found: value lenght
		avance(lenght/2)
                       ^